remove quotes from authored content.

--- a/public/static/smartgraphs/en/817dd27df90f8bee344663d0bd63f4993512bbd2/index.html
+++ b/public/static/smartgraphs/en/817dd27df90f8bee344663d0bd63f4993512bbd2/index.html
@@ -14,7 +14,7 @@
     <title>Smartgraphs</title>
   <script type="text/javascript">
    // uncomment this line to dynmically replace the JSON content on the server
-   window.authoredActivityJSON="<%= authored_activity_json %>";
+   window.authoredActivityJSON=<%= authored_activity_json %>;
 </script>
 
 <script type="text/javascript">
