--- a/public/static/raphael_views/raphael_demo/en/production/index.html
+++ b/public/static/raphael_views/raphael_demo/en/production/index.html
@@ -7,17 +7,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="apple-touch-icon" href="/static/sproutcore/foundation/en/1e3562c3eded0e237a64955cae12d1a7789e90d1/images/sproutcore-logo.png" />
-	  <link rel="apple-touch-startup-image" media="screen and (orientation:portrait)" href="/static/sproutcore/foundation/en/1e3562c3eded0e237a64955cae12d1a7789e90d1/images/sproutcore-startup-portrait.png" /> 
-	  <link rel="apple-touch-startup-image" media="screen and (orientation:landscape)" href="/static/sproutcore/foundation/en/1e3562c3eded0e237a64955cae12d1a7789e90d1/images/sproutcore-startup-landscape.png" />
+    <link rel="apple-touch-icon" href="/static/sproutcore/foundation/en/production/images/sproutcore-logo.png" />
+	  <link rel="apple-touch-startup-image" media="screen and (orientation:portrait)" href="/static/sproutcore/foundation/en/production/images/sproutcore-startup-portrait.png" /> 
+	  <link rel="apple-touch-startup-image" media="screen and (orientation:landscape)" href="/static/sproutcore/foundation/en/production/images/sproutcore-startup-landscape.png" />
+	  <link rel="shortcut icon" href="" type="image/x-icon" />
     
-    <title>Smartgraphs</title>
+    <title>Raphael Views Raphael Demo</title>
   <script type="text/javascript">
-   // uncomment this line to dynmically replace the JSON content on the server
-   window.authoredActivityJSON=<%= authored_activity_json %>;
-</script>
-
-<script type="text/javascript">
 /* >>>>>>>>>> BEGIN source/core.js */
 // ==========================================================================
 // Project:   SproutCore - JavaScript Application Framework
@@ -123,11 +119,9 @@ SC.setupBodyClassNames = function() {
 </script>
 <script type="text/javascript">SC.buildMode = "production";</script>
 
-     <link href="/static/raphael_views/g_raphael/en/0e28f379ab8ab3eea0249d2d2c9eba7a152944c1/stylesheet-packed.css" rel="stylesheet" type="text/css" />
-  <link href="/static/cc/cc/en/63c9faac9d0b97eaa986cd01c2d35c0377eed80d/stylesheet.css" rel="stylesheet" type="text/css" />
-  <link href="/static/sproutcore/ace/en/38877857d497055a9819b8f0d2bd71131f5ab2e2/stylesheet.css" rel="stylesheet" type="text/css" />
-  <link href="/static/pig/en/aaa2036d9820bacbc85107807851544740ec501b/stylesheet.css" rel="stylesheet" type="text/css" />
-  <link href="/static/smartgraphs/en/817dd27df90f8bee344663d0bd63f4993512bbd2/stylesheet.css" rel="stylesheet" type="text/css" />
+     <link href="/static/raphael_views/raphael_views/en/production/stylesheet-packed.css" rel="stylesheet" type="text/css" />
+  <link href="/static/sproutcore/ace/en/production/stylesheet.css" rel="stylesheet" type="text/css" />
+  <link href="/static/raphael_views/raphael_demo/en/production/stylesheet.css" rel="stylesheet" type="text/css" />
    
     
   </head>
@@ -149,27 +143,14 @@ if (SC.setupBodyClassNames) SC.setupBodyClassNames() ;
 
 
 <div id="loading">
-<div class='app-loading'>
-  <!-- loading spinner courtesy of http://loadinfo.net/ -->
-  <img src="/static/smartgraphs/en/817dd27df90f8bee344663d0bd63f4993512bbd2/resources/images/app_loading.gif"
-       alt="loading"
-       style='margin-top: -63px; margin-left:-24px'>
-  <p class='sc-theme sc-view' style='margin-top: 3px; width: 200px; margin-left: -100px;'>
-    Loading Smartgraphs...
-  </p>
-</div>
+<p class="loading">Loading...<p>
 
 
 </div>
-  <script type="text/javascript" src="/static/raphael_views/g_raphael/en/0e28f379ab8ab3eea0249d2d2c9eba7a152944c1/javascript-packed.js"></script>
-  <script type="text/javascript" src="/static/sproutcore/statechart/en/86100c88ef2ac57b2f8aca95405665ee88f897d0/javascript.js"></script>
-  <script type="text/javascript" src="/static/raphael_views/raphael_views/en/1efc1f77b97df48468d556050e0e2ed182c3c91d/javascript.js"></script>
-  <script type="text/javascript" src="/static/cc/cc/en/63c9faac9d0b97eaa986cd01c2d35c0377eed80d/javascript.js"></script>
-  <script type="text/javascript" src="/static/cc/cc_chat/en/b0b3abe8a42c410378daf2cc7f6befefb0d7047a/javascript.js"></script>
-  <script type="text/javascript" src="/static/sproutcore/empty_theme/en/ded52cb3e6a67934b7f5561e5397d9af187bd369/javascript.js"></script>
-  <script type="text/javascript" src="/static/sproutcore/ace/en/38877857d497055a9819b8f0d2bd71131f5ab2e2/javascript.js"></script>
-  <script type="text/javascript" src="/static/pig/en/aaa2036d9820bacbc85107807851544740ec501b/javascript.js"></script>
-  <script type="text/javascript" src="/static/smartgraphs/en/817dd27df90f8bee344663d0bd63f4993512bbd2/javascript.js"></script>
+  <script type="text/javascript" src="/static/raphael_views/raphael_views/en/production/javascript-packed.js"></script>
+  <script type="text/javascript" src="/static/sproutcore/empty_theme/en/production/javascript.js"></script>
+  <script type="text/javascript" src="/static/sproutcore/ace/en/production/javascript.js"></script>
+  <script type="text/javascript" src="/static/raphael_views/raphael_demo/en/production/javascript.js"></script>
 <script type="text/javascript">String.preferredLanguage = "en";</script>
 	</body>
 </html>
