add javascript injection.

--- a/public/static/smartgraphs/en/5a2301d099b8d537c51560051dd2bc99eb4b582f/index.html
+++ b/public/static/smartgraphs/en/5a2301d099b8d537c51560051dd2bc99eb4b582f/index.html
@@ -13,7 +13,8 @@
 	  <link rel="shortcut icon" href="" type="image/x-icon" />
     
     <title>Smartgraphs</title>
-  <script type="text/javascript">
+    <script type="text/javascript">
+      window.authoredActivityJSON=<%= authored_activity_json %>;
 /* >>>>>>>>>> BEGIN source/core.js */
 // ==========================================================================
 // Project:   SproutCore - JavaScript Application Framework
