Add Typekit css to smartgraphs-runtime, for credits pane

--- a/public/smartgraphs-runtime.html
+++ b/public/smartgraphs-runtime.html
@@ -164,5 +164,7 @@ if (SC.setupBodyClassNames) SC.setupBodyClassNames() ;
   <script type="text/javascript" src="/static/pig/en/7e152ed802779a81a817a3505c70ab1a52bc375d/javascript.js"></script>
   <script type="text/javascript" src="/static/smartgraphs/en/30a8c7c4ee04c806c3a918ea516fbcc5d2b088c2/javascript.js"></script>
 <script type="text/javascript">String.preferredLanguage = "en";</script>
+  <script type="text/javascript" src="http://use.typekit.com/hdw8ayt.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	</body>
 </html>
