--- a/public/static/smartgraphs/en/790c8f504dc7147c7c771ab96bcd911e9492e696/index.html
+++ b/public/static/smartgraphs/en/790c8f504dc7147c7c771ab96bcd911e9492e696/index.html
@@ -13,10 +13,8 @@
 	  <link rel="shortcut icon" href="" type="image/x-icon" />
     
     <title>Smartgraphs</title>
-  <script type="text/javascript">
-    window.authoredActivityJSON=<%= authored_activity_json %>;
-    window.showOutline=<%= show_outline %>;
-    window.showEditButton=<%= show_edit_button %>;
+  <script type="text/javascript">String.preferredLanguage = "en";</script>
+<script type="text/javascript">
 /* >>>>>>>>>> BEGIN source/core.js */
 // ==========================================================================
 // Project:   SproutCore - JavaScript Application Framework
