a fix for checking floating point coordinates=

--- a/public/static/smartgraphs/en/b777504ce7e20cc808c28ebfd9e54976055239fd/index.html
+++ b/public/static/smartgraphs/en/b777504ce7e20cc808c28ebfd9e54976055239fd/index.html
@@ -13,12 +13,7 @@
 	  <link rel="shortcut icon" href="" type="image/x-icon" />
     
     <title>Smartgraphs</title>
-    <script type="text/javascript">
-      window.authoredActivityJSON = <%= authored_activity_json %>;
-      window.showOutline = <%= show_outline %>;
-      window.showEditButton = <%= show_edit_button %>;
-      String.preferredLanguage = "en";
-    </script>
+  <script type="text/javascript">String.preferredLanguage = "en";</script>
 <script type="text/javascript">
 /* >>>>>>>>>> BEGIN source/core.js */
 // ==========================================================================
