--- a/public/smartgraphs/en/a387d4c989094e20dcb7f025b02ec4817a5812a2/index.html
+++ b/public/smartgraphs/en/a387d4c989094e20dcb7f025b02ec4817a5812a2/index.html
@@ -13,12 +13,7 @@
 	  <link rel="shortcut icon" href="" type="image/x-icon" />
     
     <title>Smartgraphs</title>
-    <script type="text/javascript">
-      window.authoredActivityJSON = <%= authored_activity_json %>;
-      window.showOutline = <%= show_outline %>;
-      window.showEditButton = <%= show_edit_button %>;
-      String.preferredLanguage = "en";
-    </script>
+  <script type="text/javascript">String.preferredLanguage = "en";</script>
 <script type="text/javascript">
 /* >>>>>>>>>> BEGIN source/core.js */
 // ==========================================================================
@@ -124,7 +119,7 @@ SC.setupBodyClassNames = function() {
 <script type="text/javascript">SC.buildMode = "production"; 
  SC.urlPrefix = null; </script>
 
-     <link href="/static/smartgraphs/en/3eaf7e96419713c1650d1db230b05b56efd7bc72/stylesheet-packed.css" rel="stylesheet" type="text/css" />
+     <link href="/static/smartgraphs/en/a387d4c989094e20dcb7f025b02ec4817a5812a2/stylesheet-packed.css" rel="stylesheet" type="text/css" />
    
     
     <script type="text/javascript">
@@ -160,7 +155,7 @@ if (SC.setupBodyClassNames) SC.setupBodyClassNames() ;
 <div id="loading">
 <div class='app-loading'>
   <!-- loading spinner courtesy of http://loadinfo.net/ -->
-  <img src="/static/smartgraphs/en/3eaf7e96419713c1650d1db230b05b56efd7bc72/source/resources/images/app_loading.gif"
+  <img src="/static/smartgraphs/en/a387d4c989094e20dcb7f025b02ec4817a5812a2/source/resources/images/app_loading.gif"
        style='margin-top: -63px; margin-left:-24px'>
   <p class='sc-theme sc-view' style='margin-top: 3px; width: 200px; margin-left: -100px;'>
     Loading Smartgraphs...
@@ -169,7 +164,7 @@ if (SC.setupBodyClassNames) SC.setupBodyClassNames() ;
 
 
 </div>
-  <script type="text/javascript" src="/static/smartgraphs/en/3eaf7e96419713c1650d1db230b05b56efd7bc72/javascript-packed.js"></script>
+  <script type="text/javascript" src="/static/smartgraphs/en/a387d4c989094e20dcb7f025b02ec4817a5812a2/javascript-packed.js"></script>
   <script type="text/javascript" src="http://use.typekit.com/hdw8ayt.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	</body>
