--- a/public/static/smartgraphs/en/3eaf7e96419713c1650d1db230b05b56efd7bc72/index.html
+++ b/public/static/smartgraphs/en/3eaf7e96419713c1650d1db230b05b56efd7bc72/index.html
@@ -13,12 +13,7 @@
 	  <link rel="shortcut icon" href="" type="image/x-icon" />
     
     <title>Smartgraphs</title>
-    <script type="text/javascript">
-      window.authoredActivityJSON = <%= authored_activity_json %>;
-      window.showOutline = <%= show_outline %>;
-      window.showEditButton = <%= show_edit_button %>;
-      String.preferredLanguage = "en";
-    </script>
+  <script type="text/javascript">String.preferredLanguage = "en";</script>
 <script type="text/javascript">
 /* >>>>>>>>>> BEGIN source/core.js */
 // ==========================================================================
