--- a/public/static/smartgraphs/en/ff14f6eb2d43262d51db584c3ee4a2c20d930995/index.html
+++ b/public/static/smartgraphs/en/ff14f6eb2d43262d51db584c3ee4a2c20d930995/index.html
@@ -13,15 +13,7 @@
 	  <link rel="shortcut icon" href="" type="image/x-icon" />
     
     <title>Smartgraphs</title>
-    <script type="text/javascript">
-      window['ga-disable-UA-6899787-19'] = true;
-    </script>
-  <script type="text/javascript">
-    window.authoredActivityJSON = <%= authored_activity_json %>;
-    window.showOutline = <%= show_outline %>;
-    window.showEditButton = <%= show_edit_button %>;
-    String.preferredLanguage = "en";
-  </script>
+  <script type="text/javascript">String.preferredLanguage = "en";</script>
 <script type="text/javascript">
 /* >>>>>>>>>> BEGIN source/core.js */
 // ==========================================================================
