Camelcase 'G' in SmartGraphs doc.title

--- a/public/smartgraphs-runtime.html
+++ b/public/smartgraphs-runtime.html
@@ -12,7 +12,7 @@
 	  <link rel="apple-touch-startup-image" media="screen and (orientation:landscape)" href="/static/sproutcore/foundation/en/1e3562c3eded0e237a64955cae12d1a7789e90d1/source/images/sproutcore-startup-landscape.png" />
 	  <link rel="shortcut icon" href="" type="image/x-icon" />
 
-    <title>Smartgraphs</title>
+    <title>SmartGraphs</title>
     <script>
     window['ga-disable-UA-6899787-19'] = true;
     </script>
