Add mathjax to runtime.

--- a/public/smartgraphs-runtime.html
+++ b/public/smartgraphs-runtime.html
@@ -49,7 +49,9 @@
       window.showEditButton = <%= show_edit_button %>;
       String.preferredLanguage = "en";
     </script>
-
+    <script type="text/javascript"
+            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
 <script type="text/javascript">
 /* >>>>>>>>>> BEGIN source/core.js */
 // ==========================================================================
